--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1>Hello World!!!</h1>
-<h2>Setting up for ben's other commit!!</h2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css"></link>
+    <script defer src="app.js"></script>
+    <title>Ben's Awesome Game</title>
+  </head>
+  <body>
+    <h1>Ben's Awesome Game</h1>
+  </body>
+</html>
