changing the title of the game

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css"></link>
     <script defer src="app.js"></script>
-    <title>Ben's Awesome Game</title>
+    <title>Ben's Mediocre Game</title>
   </head>
   <body>
-    <h1>Ben's Awesome Game</h1>
+    <h1>Ben's Mediocre Game</h1>
   </body>
 </html>
